[tool.poetry]
name = "polecat-auth"
version = "0.0.0"
description = ""
authors = ["Luke Hodkinson <furious.luke@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
ujson = "==1.35"
psycopg2-binary = "==2.8.4"
graphql-core-next = "==1.0.2"
graphql-server-core = {git = "https://github.com/norman-thomas/graphql-server-core", branch = "master"}
pyjwt = "==1.7.1"
factory-boy = "==2.11.1"
click = "==7.0"
termcolor = "==1.1.0"
halo = "==0.0.23"
sanic = "==19.3.1"
sanic-cors = "==0.9.9.post3"
boto3 = "==1.9.125"
cached-property = "==1.5.1"
coolname = "==1.1.0"
polecat = "*"
polecat-feedback = "*"
python-Levenshtein = "==0.12.0"
pytz = "==2019.1"
pytimeparse = "==1.1.8"

[tool.poetry.dev-dependencies]
pytest = "==4.3.1"
pytest-asyncio = "==0.10.0"
pytest-cov = "==2.8.1"
pytest-polecat = "*"
